--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles-basic": "^2.12.0",
     "tsparticles-engine": "^2.12.0"
